Added unreal hardcode

--- a/champsim_config.json
+++ b/champsim_config.json
@@ -27,8 +27,8 @@
             "dispatch_latency": 1,
             "schedule_latency": 0,
             "execute_latency": 0,
-            "branch_predictor": "bimodal",
-            "btb": "basic_btb"
+            "branch_predictor": "oracle",
+            "btb": "oracle_btb"
         }
     ],
 
